--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "homepage": "https://github.com/Kanatani28/zenn-content#readme",
   "dependencies": {
     "zenn-cli": "^0.1.110"
+  },
+  "devDependencies": {
+    "textlint": "^12.2.4",
+    "textlint-rule-preset-ja-spacing": "^2.2.0",
+    "textlint-rule-preset-ja-technical-writing": "^7.0.0",
+    "textlint-rule-prh": "^5.3.0",
+    "textlint-rule-spellcheck-tech-word": "^5.0.0"
   }
 }
